A stable branch with most features.